--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -14,43 +14,21 @@
       "11.8\n",
       "NVIDIA GeForce RTX 4060 Laptop GPU\n",
       "['abstract_algebra', 'elementary_mathematics']\n",
-      "Namespace(ntrain=0, data_dir='data/MMLU', engine=['qwen1', 'qwen2', 'qwen3'], n_reduced=None, use_subset=True, permutation_attack=False, position_permute=False, reduce_attack=False, load_in_8bit=False)\n",
+      "Namespace(ntrain=0, data_dir='data/MMLU', engine=['llama-3b', 'mistral-7b'], n_reduced=None, use_subset=True, permutation_attack=False, position_permute=False, reduce_attack=False, load_in_8bit=False)\n",
       "=====================================\n",
-      "Engine: qwen1\n",
-      "=====================================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Sliding Window Attention is enabled but not implemented for `sdpa`; unexpected results may be encountered.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average accuracy 60.00 - abstract_algebra\n",
-      "Average accuracy 50.00 - elementary_mathematics\n",
-      "Average accuracy: 55.00\n",
-      "\n",
-      "\n",
-      "\n",
-      "=====================================\n",
-      "Engine: qwen2\n",
+      "Engine: llama-3b\n",
       "=====================================\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bde3e24ff02245669bb008833199482d",
+       "model_id": "d7be302b5a1a425595f2fae040a8fa67",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/7.23k [00:00<?, ?B/s]"
+       "tokenizer_config.json:   0%|          | 0.00/54.5k [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -60,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Felix_Houdouin\\Documents\\Travail\\MVA\\Periode 2\\LLM\\myenv\\Lib\\site-packages\\huggingface_hub\\file_download.py:142: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Felix_Houdouin\\.cache\\huggingface\\hub\\models--Qwen--Qwen2.5-VL-3B-Instruct. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "c:\\Users\\Felix_Houdouin\\Documents\\Travail\\MVA\\Periode 2\\LLM\\myenv\\Lib\\site-packages\\huggingface_hub\\file_download.py:142: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Felix_Houdouin\\.cache\\huggingface\\hub\\models--meta-llama--Llama-3.2-3B-Instruct. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
       "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
       "  warnings.warn(message)\n"
      ]
@@ -68,12 +46,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fde86404d6c47eb9baf5cef934dffcf",
+       "model_id": "ff2842d643bc41c1a08e2d7223ed10f5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "vocab.json:   0%|          | 0.00/2.78M [00:00<?, ?B/s]"
+       "tokenizer.json:   0%|          | 0.00/9.09M [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -82,12 +60,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0085347407f740fc9d15af0ae42f44e0",
+       "model_id": "35d7c6779cc64c3c961797f40934b700",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "merges.txt:   0%|          | 0.00/1.67M [00:00<?, ?B/s]"
+       "special_tokens_map.json:   0%|          | 0.00/296 [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -96,12 +74,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee1f9905d3854f56974882fe65642c7a",
+       "model_id": "3dd73d435b9a4c4f80c946ffe394836e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/7.03M [00:00<?, ?B/s]"
+       "config.json:   0%|          | 0.00/878 [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -110,30 +88,44 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99525f0fe7b740c08e180c5a8f6e23d1",
+       "model_id": "552708071c7e4939a8e3b7afc0214125",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "config.json:   0%|          | 0.00/1.37k [00:00<?, ?B/s]"
+       "model.safetensors.index.json:   0%|          | 0.00/20.9k [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "ename": "ValueError",
-     "evalue": "Unrecognized configuration class <class 'transformers.models.qwen2_5_vl.configuration_qwen2_5_vl.Qwen2_5_VLConfig'> for this kind of AutoModel: AutoModelForCausalLM.\nModel type should be one of AriaTextConfig, BambaConfig, BartConfig, BertConfig, BertGenerationConfig, BigBirdConfig, BigBirdPegasusConfig, BioGptConfig, BlenderbotConfig, BlenderbotSmallConfig, BloomConfig, CamembertConfig, LlamaConfig, CodeGenConfig, CohereConfig, Cohere2Config, CpmAntConfig, CTRLConfig, Data2VecTextConfig, DbrxConfig, DiffLlamaConfig, ElectraConfig, Emu3Config, ErnieConfig, FalconConfig, FalconMambaConfig, FuyuConfig, GemmaConfig, Gemma2Config, GitConfig, GlmConfig, GotOcr2Config, GPT2Config, GPT2Config, GPTBigCodeConfig, GPTNeoConfig, GPTNeoXConfig, GPTNeoXJapaneseConfig, GPTJConfig, GraniteConfig, GraniteMoeConfig, GraniteMoeSharedConfig, HeliumConfig, JambaConfig, JetMoeConfig, LlamaConfig, MambaConfig, Mamba2Config, MarianConfig, MBartConfig, MegaConfig, MegatronBertConfig, MistralConfig, MixtralConfig, MllamaConfig, MoshiConfig, MptConfig, MusicgenConfig, MusicgenMelodyConfig, MvpConfig, NemotronConfig, OlmoConfig, Olmo2Config, OlmoeConfig, OpenLlamaConfig, OpenAIGPTConfig, OPTConfig, PegasusConfig, PersimmonConfig, PhiConfig, Phi3Config, PhimoeConfig, PLBartConfig, ProphetNetConfig, QDQBertConfig, Qwen2Config, Qwen2MoeConfig, RecurrentGemmaConfig, ReformerConfig, RemBertConfig, RobertaConfig, RobertaPreLayerNormConfig, RoCBertConfig, RoFormerConfig, RwkvConfig, Speech2Text2Config, StableLmConfig, Starcoder2Config, TransfoXLConfig, TrOCRConfig, WhisperConfig, XGLMConfig, XLMConfig, XLMProphetNetConfig, XLMRobertaConfig, XLMRobertaXLConfig, XLNetConfig, XmodConfig, ZambaConfig, Zamba2Config.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 22\u001b[39m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m attack \u001b[38;5;129;01min\u001b[39;00m attacks:\n\u001b[32m     11\u001b[39m         args = argparse.Namespace(\n\u001b[32m     12\u001b[39m         ntrain=\u001b[32m0\u001b[39m,\n\u001b[32m     13\u001b[39m         data_dir=\u001b[33m\"\u001b[39m\u001b[33mdata/MMLU\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     20\u001b[39m         load_in_8bit=\u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[32m     21\u001b[39m         )\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m         accuracy[attack] = \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Felix_Houdouin\\Documents\\Travail\\MVA\\Periode 2\\LLM\\Project\\FoolyourVLLMs\\LLMs_attack.py:358\u001b[39m, in \u001b[36mmain\u001b[39m\u001b[34m(args)\u001b[39m\n\u001b[32m    356\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mEngine: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[33m\"\u001b[39m.format(engine))\n\u001b[32m    357\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m=====================================\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m358\u001b[39m model, tokenizer = \u001b[43mload_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mengine\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    359\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m args.load_in_8bit:\n\u001b[32m    360\u001b[39m     model.cuda().half()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Felix_Houdouin\\Documents\\Travail\\MVA\\Periode 2\\LLM\\Project\\FoolyourVLLMs\\LLMs_attack.py:303\u001b[39m, in \u001b[36mload_model\u001b[39m\u001b[34m(args, engine)\u001b[39m\n\u001b[32m    301\u001b[39m     model_name = \u001b[33m\"\u001b[39m\u001b[33mQwen/Qwen2.5-VL-3B-Instruct\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    302\u001b[39m     tokenizer = AutoTokenizer.from_pretrained(model_name)\n\u001b[32m--> \u001b[39m\u001b[32m303\u001b[39m     model = \u001b[43mAutoModelForCausalLM\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfrom_pretrained\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    304\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m engine == \u001b[33m'\u001b[39m\u001b[33mqwen3\u001b[39m\u001b[33m'\u001b[39m:\n\u001b[32m    305\u001b[39m     model_name = \u001b[33m\"\u001b[39m\u001b[33mQwen/Qwen2.5-VL-7B-Instruct\u001b[39m\u001b[33m\"\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Felix_Houdouin\\Documents\\Travail\\MVA\\Periode 2\\LLM\\myenv\\Lib\\site-packages\\transformers\\models\\auto\\auto_factory.py:567\u001b[39m, in \u001b[36m_BaseAutoModelClass.from_pretrained\u001b[39m\u001b[34m(cls, pretrained_model_name_or_path, *model_args, **kwargs)\u001b[39m\n\u001b[32m    563\u001b[39m     model_class = _get_model_class(config, \u001b[38;5;28mcls\u001b[39m._model_mapping)\n\u001b[32m    564\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m model_class.from_pretrained(\n\u001b[32m    565\u001b[39m         pretrained_model_name_or_path, *model_args, config=config, **hub_kwargs, **kwargs\n\u001b[32m    566\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m567\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    568\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mUnrecognized configuration class \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig.\u001b[34m__class__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m for this kind of AutoModel: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mcls\u001b[39m.\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m\n\u001b[32m    569\u001b[39m     \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mModel type should be one of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m, \u001b[39m\u001b[33m'\u001b[39m.join(c.\u001b[34m__name__\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mfor\u001b[39;00m\u001b[38;5;250m \u001b[39mc\u001b[38;5;250m \u001b[39m\u001b[38;5;129;01min\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28mcls\u001b[39m._model_mapping.keys())\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    570\u001b[39m )\n",
-      "\u001b[31mValueError\u001b[39m: Unrecognized configuration class <class 'transformers.models.qwen2_5_vl.configuration_qwen2_5_vl.Qwen2_5_VLConfig'> for this kind of AutoModel: AutoModelForCausalLM.\nModel type should be one of AriaTextConfig, BambaConfig, BartConfig, BertConfig, BertGenerationConfig, BigBirdConfig, BigBirdPegasusConfig, BioGptConfig, BlenderbotConfig, BlenderbotSmallConfig, BloomConfig, CamembertConfig, LlamaConfig, CodeGenConfig, CohereConfig, Cohere2Config, CpmAntConfig, CTRLConfig, Data2VecTextConfig, DbrxConfig, DiffLlamaConfig, ElectraConfig, Emu3Config, ErnieConfig, FalconConfig, FalconMambaConfig, FuyuConfig, GemmaConfig, Gemma2Config, GitConfig, GlmConfig, GotOcr2Config, GPT2Config, GPT2Config, GPTBigCodeConfig, GPTNeoConfig, GPTNeoXConfig, GPTNeoXJapaneseConfig, GPTJConfig, GraniteConfig, GraniteMoeConfig, GraniteMoeSharedConfig, HeliumConfig, JambaConfig, JetMoeConfig, LlamaConfig, MambaConfig, Mamba2Config, MarianConfig, MBartConfig, MegaConfig, MegatronBertConfig, MistralConfig, MixtralConfig, MllamaConfig, MoshiConfig, MptConfig, MusicgenConfig, MusicgenMelodyConfig, MvpConfig, NemotronConfig, OlmoConfig, Olmo2Config, OlmoeConfig, OpenLlamaConfig, OpenAIGPTConfig, OPTConfig, PegasusConfig, PersimmonConfig, PhiConfig, Phi3Config, PhimoeConfig, PLBartConfig, ProphetNetConfig, QDQBertConfig, Qwen2Config, Qwen2MoeConfig, RecurrentGemmaConfig, ReformerConfig, RemBertConfig, RobertaConfig, RobertaPreLayerNormConfig, RoCBertConfig, RoFormerConfig, RwkvConfig, Speech2Text2Config, StableLmConfig, Starcoder2Config, TransfoXLConfig, TrOCRConfig, WhisperConfig, XGLMConfig, XLMConfig, XLMProphetNetConfig, XLMRobertaConfig, XLMRobertaXLConfig, XLNetConfig, XmodConfig, ZambaConfig, Zamba2Config."
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "75d0a23735df4a7ab287d0ddab1bbf36",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c2e7086eb2e545adafc6d8e9404a58f6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00001-of-00002.safetensors:   0%|          | 0.00/4.97G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -143,7 +135,7 @@
     "print(torch.cuda.is_available())  # Doit afficher True\n",
     "print(torch.version.cuda)  # Doit afficher une version de CUDA\n",
     "print(torch.cuda.get_device_name(0))  # Doit afficher le nom de votre GPU\n",
-    "models = [\"qwen1\",\"lamma-3b\",\"mistral-7b\"]\n",
+    "models = [\"llama-3b\",\"mistral-7b\"]\n",
     "attacks = [False, True]\n",
     "accuracy = {}\n",
     "for attack in attacks:\n",
