--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -14,118 +14,57 @@
       "11.8\n",
       "NVIDIA GeForce RTX 4060 Laptop GPU\n",
       "['abstract_algebra', 'elementary_mathematics']\n",
-      "Namespace(ntrain=0, data_dir='data/MMLU', engine=['llama-3b', 'mistral-7b'], n_reduced=None, use_subset=True, permutation_attack=False, position_permute=False, reduce_attack=False, load_in_8bit=False)\n",
+      "Namespace(ntrain=0, data_dir='data/MMLU', engine=['qwen1'], n_reduced=None, use_subset=True, permutation_attack=False, position_permute=False, reduce_attack=False, load_in_8bit=False)\n",
       "=====================================\n",
-      "Engine: llama-3b\n",
+      "Engine: qwen1\n",
       "=====================================\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7be302b5a1a425595f2fae040a8fa67",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/54.5k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Felix_Houdouin\\Documents\\Travail\\MVA\\Periode 2\\LLM\\myenv\\Lib\\site-packages\\huggingface_hub\\file_download.py:142: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Felix_Houdouin\\.cache\\huggingface\\hub\\models--meta-llama--Llama-3.2-3B-Instruct. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
-      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
-      "  warnings.warn(message)\n"
+      "Sliding Window Attention is enabled but not implemented for `sdpa`; unexpected results may be encountered.\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff2842d643bc41c1a08e2d7223ed10f5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/9.09M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35d7c6779cc64c3c961797f40934b700",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/296 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3dd73d435b9a4c4f80c946ffe394836e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/878 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "552708071c7e4939a8e3b7afc0214125",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors.index.json:   0%|          | 0.00/20.9k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75d0a23735df4a7ab287d0ddab1bbf36",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2e7086eb2e545adafc6d8e9404a58f6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model-00001-of-00002.safetensors:   0%|          | 0.00/4.97G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prompt:  The following are multiple choice questions (with answers) about abstract_algebra.\n",
+      "\n",
+      "Find the degree for the given field extension Q(sqrt(2), sqrt(3), sqrt(18)) over Q.\n",
+      "A. 0\n",
+      "B. 4\n",
+      "C. 2\n",
+      "D. 6\n",
+      "Answer:\n",
+      "Average accuracy 100.00 - abstract_algebra\n",
+      "Prompt:  The following are multiple choice questions (with answers) about elementary_mathematics.\n",
+      "\n",
+      "What is the value of p in 24 = 2p?\n",
+      "A. p = 4\n",
+      "B. p = 8\n",
+      "C. p = 12\n",
+      "D. p = 24\n",
+      "Answer:\n",
+      "Average accuracy 0.00 - elementary_mathematics\n",
+      "Average accuracy: 50.00\n",
+      "\n",
+      "\n",
+      "\n",
+      "['abstract_algebra', 'elementary_mathematics']\n",
+      "Namespace(ntrain=0, data_dir='data/MMLU', engine=['qwen1'], n_reduced=None, use_subset=True, permutation_attack=True, position_permute=False, reduce_attack=False, load_in_8bit=False)\n",
+      "=====================================\n",
+      "Engine: qwen1\n",
+      "=====================================\n",
+      "Average accuracy 0.00 - abstract_algebra\n",
+      "Average accuracy 0.00 - elementary_mathematics\n",
+      "Average accuracy: 0.00\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -135,34 +74,37 @@
     "print(torch.cuda.is_available())  # Doit afficher True\n",
     "print(torch.version.cuda)  # Doit afficher une version de CUDA\n",
     "print(torch.cuda.get_device_name(0))  # Doit afficher le nom de votre GPU\n",
-    "models = [\"llama-3b\",\"mistral-7b\"]\n",
-    "attacks = [False, True]\n",
+    "models = [\"qwen1\"]\n",
     "accuracy = {}\n",
-    "for attack in attacks:\n",
-    "        args = argparse.Namespace(\n",
-    "        ntrain=0,\n",
-    "        data_dir=\"data/MMLU\",\n",
-    "        engine=models,\n",
-    "        n_reduced=None,\n",
-    "        use_subset=True,\n",
-    "        permutation_attack=attack,\n",
-    "        position_permute=False,\n",
-    "        reduce_attack=False,\n",
-    "        load_in_8bit=False,\n",
-    "        )\n",
-    "        accuracy[attack] = main(args)"
+    "\n",
+    "args = argparse.Namespace(\n",
+    "ntrain=0,\n",
+    "data_dir=\"data/MMLU\",\n",
+    "engine=models,\n",
+    "n_reduced=None,\n",
+    "use_subset=True,\n",
+    "subset_size = 3,\n",
+    "permutation_attack=False,\n",
+    "position_permute=False,\n",
+    "reduce_attack=False,\n",
+    "load_in_8bit=False,\n",
+    ")\n",
+    "\n",
+    "accuracy['standard'] = main(args)\n",
+    "args.permutation_attack = True\n",
+    "accuracy['permutation'] = main(args)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{False: {'qwen1': [np.float64(0.6), np.float64(0.5)]}, True: {'qwen1': []}}\n"
+      "{'standard': {'qwen1': [np.float64(1.0), np.float64(0.0)]}, 'permutation': {'qwen1': []}}\n"
      ]
     }
    ],
