--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -723,9 +723,79 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abstract_algebra', 'anatomy', 'astronomy', 'business_ethics', 'clinical_knowledge', 'college_biology', 'college_chemistry', 'college_computer_science', 'college_mathematics', 'college_medicine', 'college_physics', 'computer_security', 'conceptual_physics', 'econometrics', 'electrical_engineering']\n",
+      "Namespace(ntrain=0, data_dir='data/MMLU', engine=['qwen1', 'llama-3b'], n_reduced=None, use_subset=True, subset_size=101, permutation_attack=True, position_permute=False, reduce_attack=False, load_in_8bit=False, verbose=False, stop_attack=True, subset_subjects=15)\n",
+      "=====================================\n",
+      "Engine: qwen1\n",
+      "=====================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sliding Window Attention is enabled but not implemented for `sdpa`; unexpected results may be encountered.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average accuracy 0.00 - abstract_algebra\n",
+      "Average accuracy 0.00 - anatomy\n",
+      "Average accuracy 0.99 - astronomy\n",
+      "Average accuracy 1.00 - business_ethics\n",
+      "Average accuracy 0.99 - clinical_knowledge\n",
+      "Average accuracy 0.00 - college_biology\n",
+      "Average accuracy 0.00 - college_chemistry\n",
+      "Average accuracy 2.00 - college_computer_science\n",
+      "Average accuracy 1.00 - college_mathematics\n",
+      "Average accuracy 0.99 - college_medicine\n",
+      "Average accuracy 1.98 - college_physics\n",
+      "Average accuracy 1.00 - computer_security\n",
+      "Average accuracy 0.00 - conceptual_physics\n",
+      "Average accuracy 0.99 - econometrics\n",
+      "Average accuracy 2.97 - electrical_engineering\n",
+      "Average accuracy: 0.93\n",
+      "\n",
+      "\n",
+      "\n",
+      "=====================================\n",
+      "Engine: llama-3b\n",
+      "=====================================\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "797af434d6224aada14bad4710c6cf4c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average accuracy 6.00 - abstract_algebra\n",
+      "Average accuracy 38.61 - anatomy\n"
+     ]
+    }
+   ],
    "source": [
     "args.permutation_attack = True\n",
+    "args.stop_attack = True\n",
     "accuracy['attack'] = main(args)\n"
    ]
   },
